Apanhando HORRORES pra implementar uma busca no encurtador de URL

--- a/aabrlus/aabrl/templates/aabrl/index.html
+++ b/aabrlus/aabrl/templates/aabrl/index.html
@@ -7,13 +7,14 @@
 <div class="panel panel-default">
  <div class="panel-body">
  <div class="col-sm-9">
- 	<input type="text" name="url" id="url" class="form-control input-sm" placeholder="http://www.facebook.com" />
+ 	<input type="text" name="url" id="url" class="form-control input-sm" placeholder="Preencha aqui com a URL que deseja encolher." />
  </div>
  <div class="col-sm-3">
  	{% csrf_token %}
  	<button id="submitButton" class="btn btn-primary">OK</button></p> 
  </div>
  </div>
- <div class="panel-footer"><span id="url-result">Preencha acima com a URL que deseja encolher.</span></div>
+ <div class="panel-footer"><span id="url-result">Veja aqui sua URL encolhida.</span></div>
+ <div class="panel-footer"><a href="{% url 'aabrl:listaurls' %}">Lista de URLs encurtadas.</a>
 </div>
 {% endblock %}
