--- a/aabrlus/aabrl/templates/aabrl/base.html
+++ b/aabrlus/aabrl/templates/aabrl/base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-	 <title>{% block title %}Welcome to mysite{% endblock %}</title>
+	 <title>{% block title %}AABRLUS - AABRL URL SHORTENER{% endblock %}</title>
 	 {% load staticfiles %}
 	 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
 	 <link rel="stylesheet" type="text/css" href="{% static 'aabrl/css/custom.css' %}" />
@@ -22,6 +22,18 @@
 				 dataType: 'json'
 		 	 });
 		  });
+//		  $('#submitButton2').click(function() {
+//			 $.ajax({
+//				 type: "SHOW",
+//				 url: "/listaurls/",
+//				 data: {
+//					 'busca' : $('#busca').val(),
+//					 'csrfmiddlewaretoken' : $("input[name=csrfmiddlewaretoken]").val()
+//			 	 },
+//				 success: returnSuccess,
+//				 dataType: 'json'
+//		 	 });
+//		  });
 	});
 	function returnSuccess(data, textStatus, jqXHR) {
 		 if(data.url) {
@@ -35,14 +47,16 @@
     <body>
 	<div id="wrap">
 		<header>
-			<h1><a href="{% url 'aabrl:home' %}">Encurtador de URL</a>
-			<small>Encolha a URL desejada.</small></h1>
+			<h1><a href="{% url 'aabrl:home' %}">Encurtador de URL de André Loponte</a>
 		</header>
 		  
 		<div id="content">
 			{% block content %}
 			  
 			{% endblock %}
+		</div>
+		<div>
+
 		</div>
 	</div>
      </body>
