Fiz o basicão funcionando. A partir de agora, praticamente estou refazendo usando os extras...

--- a/aabrlus/aabrl/templates/aabrl/index.html
+++ b/aabrlus/aabrl/templates/aabrl/index.html
@@ -15,6 +15,6 @@
  </div>
  </div>
  <div class="panel-footer"><span id="url-result">Veja aqui sua URL encolhida.</span></div>
- <div class="panel-footer"><a href="{% url 'aabrl:listaurls' %}">Lista de URLs encurtadas.</a>
 </div>
+ <div id="discreto"><a href="aabrl/listaurls.html">Lista de URLs encurtadas.</a></div>
 {% endblock %}
