--- a/aabrlus/aabrl/templates/aabrl/listaurls.html
+++ b/aabrlus/aabrl/templates/aabrl/listaurls.html
@@ -6,7 +6,7 @@
 
 {% for url in urls %}
     <div>
-        <p>URL: {{ url.url_original }}</p>
+        <p id="lista">aabrl.us/{{ url.encurt_id }} ===>> {{ url.url_original }}</p>
     </div>
 {% endfor %}
 
